servo/tests/compiletest/plugin/compile-fail/transmute_type.rs
#
!
[
feature
(
plugin
)
]
#
!
[
plugin
(
plugins
)
]
#
!
[
allow
(
dead_code
)
]
#
!
[
deny
(
transmute_type_lint
)
]
use
std
:
:
mem
:
:
{
self
transmute
}
;
fn
main
(
)
{
let
_
:
&
[
u8
]
=
unsafe
{
transmute
(
"
Rust
"
)
}
;
let
_
:
&
[
u8
]
=
unsafe
{
mem
:
:
transmute
(
"
Rust
"
)
}
;
}
